"Updated details on the page"

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Salesforce Admin</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>India</p>
       <h1>What are your favorite hobbies?</h1>
       <p>Details here...</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Technical Architect at Salesforce</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Currently living in Sydney</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>My fascination with technology</p>
     </section>
 
     <footer id="footer">
